[package]
name          = "shellfn"
version       = "0.1.0"
authors       = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
description   = "Attribute-like proc macro which reduces the amount of code required to call shell commands and parse the results"
keywords      = ["shell", "command", "bash"]
categories    = ["command-line-interface", "os"]
readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/synek317/shellfn"
documentation = "https://docs.rs/shellfn"
edition       = "2018"

[workspace]
members = [
    "shellfn-attribute",
    "shellfn-core"
]

[badges]
travis-ci = { repository = "synek317/shellfn", branch = "master" }

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
shellfn-attribute = { path = "./shellfn-attribute", version = "0.1.0" }
shellfn-core      = { path = "./shellfn-core", version = "0.1.0" }
