[package]
name = "shellfn-attribute"
version = "0.1.0"
authors = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
edition = "2018"

[lib]
doctest = false
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "*", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"
darling = "*"
shellwords = "*"
shellfn-core = { path = "../shellfn-core" }