[package]
name        = "shellfn-attribute"
version     = "0.1.1"
authors     = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
description = "Attribute macro for `shellfn` crate"
license     = "MIT"
edition     = "2018"

[lib]
doctest    = false
proc-macro = true
path       = "src/lib.rs"

[dependencies]
syn          = { version = "2", features = ["full", "extra-traits"] }
quote        = "1"
proc-macro2  = "1"
darling      = "0.20"
shellwords   = "1.0.0"
shellfn-core = { path = "../shellfn-core", version = "0.1.1" }
