[package]
name        = "shellfn-core"
version     = "0.2.0"
authors     = ["Marcin Sas-Szymanski <marcin.sas-szymanski@anixe.pl>"]
description = "Core functions for `shellfn` crate"
license     = "MIT"
edition     = "2018"

[lib]
doctest = false

[dependencies]
itertools = ">= 0.8, <=0.14"
thiserror = "2"
